gym ist page content done

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -633,6 +633,12 @@ section {
 /*--------------------------------------------------------------
 # About Us Section
 --------------------------------------------------------------*/
+.about .content{
+  background-image: url(../img/pexels-pikx-by-panther-1547248.jpg);
+  /* background-image: url(../img/lorenzo-hamers-jvIaut-V9a4-unsplash.jpg); */
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .about .content h3 {
   font-weight: 700;
   font-size: 32px;
