--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,7 +60,7 @@ h6 {
 # Sections & Section Header
 --------------------------------------------------------------*/
 section {
-  padding: 80px 0;
+  padding-bottom: 25px ;
   overflow: hidden;
 }
 
@@ -110,6 +110,8 @@ section {
   line-height: 0;
 }
 
+
+
 .section-header p {
   margin-bottom: 0;
   position: relative;
@@ -140,7 +142,7 @@ section {
 
 .breadcrumbs .page-header:before {
   content: "";
-  background-color: rgba(14, 29, 52, 0.8);
+  background-color: rgba(84 92 106 / 80%);
   position: absolute;
   inset: 0;
 }
@@ -634,7 +636,7 @@ section {
 # About Us Section
 --------------------------------------------------------------*/
 .about .content{
-  background-image: url(../img/pexels-pikx-by-panther-1547248.jpg);
+  /* background-image: url(../img/pexels-pikx-by-panther-1547248.jpg); */
   /* background-image: url(../img/lorenzo-hamers-jvIaut-V9a4-unsplash.jpg); */
   background-repeat: no-repeat;
   background-size: cover;
@@ -993,7 +995,7 @@ section {
 }
 
 .pricing .featured {
-  border-top-color: var(--color-primary);
+  border-top-color: var(--color-secondary);
 }
 
 .pricing .featured .buy-btn {
@@ -1026,7 +1028,7 @@ section {
 # Frequently Asked Questions Section
 --------------------------------------------------------------*/
 .faq {
-  padding-top: 80px;
+  /* padding-top: 80px; */
 }
 
 .faq .accordion-item {
@@ -1071,13 +1073,19 @@ section {
   position: absolute;
   right: 15px;
   top: 15px;
+  display: none;
 }
 
 .faq .accordion-body {
-  padding: 0 30px 25px 60px;
+  padding: 0 30px 25px 20px;
   border: 0;
   background: rgba(14, 29, 52, 0.03);
   border-radius: 5px;
+}
+
+.test{
+  position: relative;
+  right: 20px;
 }
 
 /*--------------------------------------------------------------
