--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,7 +142,7 @@ section {
 
 .breadcrumbs .page-header:before {
   content: "";
-  background-color: rgba(84 92 106 / 80%);
+  background-color: rgba(16, 16, 16, 0.72);
   position: absolute;
   inset: 0;
 }
@@ -777,12 +777,12 @@ section {
   background: #fff;
   position: relative;
   border-radius: 0;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .services .card .card-img {
   overflow: hidden;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
   border-radius: 0;
 }
 
@@ -792,9 +792,9 @@ section {
 
 .services .card h3 {
   font-weight: 700;
-  font-size: 27px;
+  font-size: 25px;
   margin-bottom: 5px;
-  padding: 10px 30px;
+  padding: 0px 30px;
   text-transform: uppercase;
 }
 
@@ -811,7 +811,7 @@ section {
   padding: 0 30px;
   margin-bottom: 30px;
   color: var(--color-secondary);
-  font-size: 20px;
+  font-size: 23px;
 }
 
 .services .card:hover .card-img img {
